
CMAKE_MINIMUM_REQUIRED ( VERSION 2.4 )

PROJECT ( cmdbm )

SET ( VERSION_MAJOR "1" )
SET ( VERSION_MINOR "0" )
SET ( VERSION_PATCH "0" )
SET ( LIB_VERSION_STRING ${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH} )

OPTION ( SUPPORT_MYSQL "Support MySQL database" ON )
OPTION ( SUPPORT_ORACLE "Support Oracle database" ON )
OPTION ( SUPPORT_PGSQL "Support PgSQL database" ON )
OPTION ( SUPPORT_ODBC "Support ODBC" ON )

INCLUDE_DIRECTORIES ( src )

SET ( BUILD_DEST "$ENV{HOME}/.local" )

SET ( LIB_SRCS
    src/base.c
    src/connection.c
    src/context.c
    src/database.c
    src/mapper.c
    src/session.c
    src/sqlbuild.c
    modules/cmdbm_mysql.c
    modules/cmdbm_odbc.c
    modules/cmdbm_oracle.c
    modules/cmdbm_pgsql.c )

ADD_LIBRARY ( cmdbm SHARED ${LIB_SRCS} )
ADD_LIBRARY ( cmdbmStatic STATIC ${LIB_SRCS} )

FIND_PACKAGE ( PkgConfig REQUIRED )
    
TARGET_INCLUDE_DIRECTORIES( cmdbm PUBLIC ${BUILD_DEST}/include )
TARGET_LINK_LIBRARIES ( cmdbm -L${BUILD_DEST}/lib -lcmutils )
TARGET_INCLUDE_DIRECTORIES( cmdbmStatic PUBLIC ${BUILD_DEST}/include )
TARGET_LINK_LIBRARIES ( cmdbmStatic -L${BUILD_DEST}/lib -lcmutils )

IF ( SUPPORT_MYSQL )
    IF ( APPLE )
        SET ( MYSQLCLIENT_BASE /usr/local/opt/mysql-connector-c )
        IF ( NOT EXISTS ${MYSQLCLIENT_BASE} )
            MESSAGE ( FATAL_ERROR "mysql client library not found" )
        ENDIF ()
        SET ( MYSQLCLIENT_LIBRARIES mysqlclient )
        SET ( MYSQLCLIENT_INCLUDE_DIRS ${MYSQLCLIENT_BASE}/include )
        TARGET_LINK_LIBRARIES ( cmdbm -L${MYSQLCLIENT_BASE}/lib )
        TARGET_LINK_LIBRARIES ( cmdbmStatic -L${MYSQLCLIENT_BASE}/lib )
    ELSEIF ( APPLE )
        PKG_CHECK_MODULES ( MYSQLCLIENT REQUIRED mysqlclient )
    ENDIF ()
    TARGET_LINK_LIBRARIES ( cmdbm ${MYSQLCLIENT_LIBRARIES} )
    TARGET_INCLUDE_DIRECTORIES( cmdbm PUBLIC ${MYSQLCLIENT_INCLUDE_DIRS} )
    TARGET_COMPILE_OPTIONS( cmdbm PUBLIC ${MYSQLCLIENT_CFLAGS_OTHER} )
    TARGET_LINK_LIBRARIES ( cmdbmStatic ${MYSQLCLIENT_LIBRARIES} )
    TARGET_INCLUDE_DIRECTORIES( cmdbmStatic PUBLIC ${MYSQLCLIENT_INCLUDE_DIRS} )
    TARGET_COMPILE_OPTIONS( cmdbmStatic PUBLIC ${MYSQLCLIENT_CFLAGS_OTHER} )
    ADD_DEFINITIONS ( -DCMDBM_MYSQL )
ENDIF ( SUPPORT_MYSQL )

IF ( SUPPORT_ORACLE )
    SET ( NNZLIB nnz11 )
    SET ( SOEXT so )
    IF ( APPLE )
        SET ( SOEXT dylib )
    ENDIF ()
    IF ( WIN32 )
        SET ( SOEXT dll )
    ENDIF ()
    IF ( EXISTS $ENV{ORACLE_HOME}/libnnz12.${SOEXT} )
        SET ( NNZLIB nnz12 )
    ENDIF ()
    TARGET_INCLUDE_DIRECTORIES( cmdbm PUBLIC $ENV{ORACLE_HOME}/sdk/include )
    TARGET_LINK_LIBRARIES ( cmdbm -L$ENV{ORACLE_HOME} -lclntsh -l${NNZLIB} )
    TARGET_INCLUDE_DIRECTORIES( cmdbmStatic PUBLIC $ENV{ORACLE_HOME}/sdk/include )
    TARGET_LINK_LIBRARIES ( cmdbmStatic -L$ENV{ORACLE_HOME} -lclntsh -l${NNZLIB} )
    # INCLUDE_DIRECTORIES ( $ENV{ORACLE_HOME}/sdk/include )
    # SET ( LIBS ${LIBS} -L$ENV{ORACLE_HOME} -lclntsh )
    ADD_DEFINITIONS ( -DCMDBM_ORACLE )
ENDIF ( SUPPORT_ORACLE )

IF ( SUPPORT_PGSQL )
    IF ( APPLE )
        SET ( LIBPQ_BASE /usr/local/opt/libpq )
        IF ( NOT EXISTS ${LIBPQ_BASE} )
            MESSAGE ( FATAL_ERROR "postgresql client library(libpq) not found" )
        ENDIF ()
        SET ( LIBPQ_LIBRARIES pq )
        SET ( LIBPQ_INCLUDE_DIRS ${LIBPQ_BASE}/include )
        TARGET_LINK_LIBRARIES ( cmdbm -L${LIBPQ_BASE}/lib )
        TARGET_LINK_LIBRARIES ( cmdbmStatic -L${LIBPQ_BASE}/lib )
    ELSEIF ( APPLE )
        PKG_CHECK_MODULES ( LIBPQ REQUIRED libpq )
    ENDIF ()
    TARGET_LINK_LIBRARIES ( cmdbm ${LIBPQ_LIBRARIES} )
    TARGET_INCLUDE_DIRECTORIES( cmdbm PUBLIC ${LIBPQ_INCLUDE_DIRS} )
    TARGET_COMPILE_OPTIONS( cmdbm PUBLIC ${LIBPQ_CFLAGS_OTHER} )
    TARGET_LINK_LIBRARIES ( cmdbmStatic ${LIBPQ_LIBRARIES} )
    TARGET_INCLUDE_DIRECTORIES( cmdbmStatic PUBLIC ${LIBPQ_INCLUDE_DIRS} )
    TARGET_COMPILE_OPTIONS( cmdbmStatic PUBLIC ${LIBPQ_CFLAGS_OTHER} )
    ADD_DEFINITIONS ( -DCMDBM_PGSQL )
ENDIF ( SUPPORT_PGSQL )

IF ( SUPPORT_ODBC )
    IF ( APPLE )
        SET ( UNIXODBC_BASE /usr/local/opt/unixodbc )
        IF ( NOT EXISTS ${UNIXODBC_BASE} )
            MESSAGE ( FATAL_ERROR "odbc library not found" )
        ENDIF ()
        SET ( UNIXODBC_INCLUDE_DIRS ${UNIXODBC_BASE}/include )
        TARGET_INCLUDE_DIRECTORIES( cmdbm PUBLIC ${UNIXODBC_INCLUDE_DIRS} )
        TARGET_INCLUDE_DIRECTORIES( cmdbmStatic PUBLIC ${UNIXODBC_INCLUDE_DIRS} )
        TARGET_LINK_LIBRARIES ( cmdbm -L${UNIXODBC_BASE}/lib )
        TARGET_LINK_LIBRARIES ( cmdbmStatic -L${UNIXODBC_BASE}/lib )
    ENDIF ()
    TARGET_LINK_LIBRARIES ( cmdbm -lodbc )
    TARGET_LINK_LIBRARIES ( cmdbmStatic -lodbc )
    ADD_DEFINITIONS ( -DCMDBM_ODBC )
    # SET ( LIBS ${LIBS} -lodbc )
    # ADD_DEFINITIONS ( -DCMDBM_ODBC )
ENDIF ( SUPPORT_ODBC )

SET_TARGET_PROPERTIES ( cmdbm PROPERTIES VERSION ${LIB_VERSION_STRING} )
SET_TARGET_PROPERTIES ( cmdbmStatic PROPERTIES OUTPUT_NAME cmdbm )

INSTALL(TARGETS cmdbm cmdbmStatic
  LIBRARY DESTINATION lib
  ARCHIVE DESTINATION lib )
INSTALL(FILES src/libcmdbm.h DESTINATION include)
