
CMAKE_MINIMUM_REQUIRED ( VERSION 3.10 )

PROJECT ( cmdbm LANGUAGES C )

SET (CMAKE_C_STANDARD 99)

FILE ( READ "VERSION" VERSION_CONTENTS )
STRING ( STRIP ${VERSION_CONTENTS} VERSION_CONTENTS )
IF ( VERSION_CONTENTS MATCHES "([0-9]+)\\.([0-9]+)\\.([0-9]+)" )
    SET ( VERSION_MAJOR ${CMAKE_MATCH_1} )
    SET ( VERSION_MINOR ${CMAKE_MATCH_2} )
    SET ( VERSION_PATCH ${CMAKE_MATCH_3} )
ENDIF ()
MESSAGE ( STATUS "Configuring cmdbm version ${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH}" )
SET ( LIBCMDBM_VERSION_STRING ${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH} )
ADD_COMPILE_DEFINITIONS( LIBCMDBM_VERSION_STRING="${LIBCMDBM_VERSION_STRING}" )

ADD_SUBDIRECTORY( libcmutils )

OPTION ( SUPPORT_MYSQL "Support MySQL database" OFF )
OPTION ( SUPPORT_MARIA "Support MariaDB database" ON )
OPTION ( SUPPORT_ORACLE "Support Oracle database" OFF )
OPTION ( SUPPORT_PGSQL "Support PgSQL database" ON )
OPTION ( SUPPORT_ODBC "Support ODBC" ON )

INCLUDE_DIRECTORIES ( src )

MESSAGE( "building for ${CMAKE_SYSTEM_NAME}...")

SET ( LIB_SRCS
    src/base.c
    src/connection.c
    src/context.c
    src/database.c
    src/mapper.c
    src/session.c
    src/sqlbuild.c
    modules/cmdbm_mysql.c
    modules/cmdbm_odbc.c
    modules/cmdbm_oracle.c
    modules/cmdbm_pgsql.c )

ADD_LIBRARY ( cmdbm SHARED ${LIB_SRCS} )
ADD_LIBRARY ( cmdbmStatic STATIC ${LIB_SRCS} )

IF (APPLE)
    SET(ENV{PKG_CONFIG_PATH} "$ENV{PKG_CONFIG_PATH}:$ENV{HOMEBREW_PREFIX}/lib/pkgconfig")
ENDIF ()
# $ENV{HOMEBREW_PREFIX}/opt/unixodbc/lib/pkgconfig

FIND_PACKAGE ( PkgConfig REQUIRED )

TARGET_LINK_LIBRARIES( cmdbm PUBLIC cmutils )
TARGET_LINK_LIBRARIES( cmdbmStatic PUBLIC cmutilsStatic )
TARGET_INCLUDE_DIRECTORIES( cmdbm PUBLIC libcmutils/src )
TARGET_INCLUDE_DIRECTORIES( cmdbmStatic PUBLIC libcmutils/src )

IF ( SUPPORT_MYSQL )
    IF (APPLE)
        SET(ENV{PKG_CONFIG_PATH} "$ENV{PKG_CONFIG_PATH}:$ENV{HOMEBREW_PREFIX}/opt/mysql-connector-c/lib/pkgconfig")
    ENDIF ()
    IF ( APPLE )
        SET ( MYSQLCLIENT_BASE /usr/local/opt/mysql-connector-c )
        IF ( NOT EXISTS ${MYSQLCLIENT_BASE} )
            MESSAGE ( FATAL_ERROR "mysql client library not found" )
        ENDIF ()
        SET ( MYSQLCLIENT_LIBRARIES mysqlclient )
        SET ( MYSQLCLIENT_INCLUDE_DIRS ${MYSQLCLIENT_BASE}/include )
        TARGET_LINK_LIBRARIES ( cmdbm -L${MYSQLCLIENT_BASE}/lib )
        TARGET_LINK_LIBRARIES ( cmdbmStatic -L${MYSQLCLIENT_BASE}/lib )
    ELSEIF ( APPLE )
        PKG_CHECK_MODULES ( MYSQLCLIENT REQUIRED mysqlclient )
    ENDIF ()
    TARGET_LINK_LIBRARIES ( cmdbm ${MYSQLCLIENT_LIBRARIES} )
    TARGET_INCLUDE_DIRECTORIES( cmdbm PUBLIC ${MYSQLCLIENT_INCLUDE_DIRS} )
    TARGET_COMPILE_OPTIONS( cmdbm PUBLIC ${MYSQLCLIENT_CFLAGS_OTHER} )
    TARGET_LINK_LIBRARIES ( cmdbmStatic ${MYSQLCLIENT_LIBRARIES} )
    TARGET_INCLUDE_DIRECTORIES( cmdbmStatic PUBLIC ${MYSQLCLIENT_INCLUDE_DIRS} )
    TARGET_COMPILE_OPTIONS( cmdbmStatic PUBLIC ${MYSQLCLIENT_CFLAGS_OTHER} )
    ADD_DEFINITIONS ( -DCMDBM_MYSQL )
ENDIF ( SUPPORT_MYSQL )

IF ( SUPPORT_MARIA )
    IF (APPLE)
        SET(ENV{PKG_CONFIG_PATH} "$ENV{PKG_CONFIG_PATH}:$ENV{HOMEBREW_PREFIX}/opt/mariadb-connector-c/lib/pkgconfig")
    ENDIF ()
    PKG_CHECK_MODULES ( MARIACLIENT REQUIRED libmariadb )
    MESSAGE( "found mariadb " ${MARIACLIENT_LINK_LIBRARIES} )
    TARGET_LINK_OPTIONS( cmdbm PRIVATE ${MARIACLIENT_LDFLAGS} )
    TARGET_COMPILE_OPTIONS( cmdbm PRIVATE ${MARIACLIENT_CFLAGS} )
    TARGET_LINK_OPTIONS( cmdbmStatic PRIVATE ${MARIACLIENT_LDFLAGS} )
    TARGET_COMPILE_OPTIONS( cmdbmStatic PRIVATE ${MARIACLIENT_CFLAGS} )
    ADD_DEFINITIONS ( -DCMDBM_MARIA )
ENDIF ( SUPPORT_MARIA )

IF ( SUPPORT_ORACLE )
    MESSAGE( "found oracle $ENV{ORACLE_HOME}" )
    TARGET_INCLUDE_DIRECTORIES( cmdbm PRIVATE $ENV{ORACLE_HOME}/sdk/include )
    TARGET_LINK_LIBRARIES ( cmdbm PRIVATE clntsh nnz )
    TARGET_LINK_DIRECTORIES ( cmdbm PRIVATE $ENV{ORACLE_HOME} )
    TARGET_INCLUDE_DIRECTORIES( cmdbmStatic PRIVATE $ENV{ORACLE_HOME}/sdk/include )
    TARGET_LINK_LIBRARIES ( cmdbm PRIVATE clntsh nnz )
    TARGET_LINK_DIRECTORIES ( cmdbm PRIVATE $ENV{ORACLE_HOME} )
    ADD_DEFINITIONS ( -DCMDBM_ORACLE )
ENDIF ( SUPPORT_ORACLE )

IF ( SUPPORT_PGSQL )
    IF (APPLE)
        SET(ENV{PKG_CONFIG_PATH} "$ENV{PKG_CONFIG_PATH}:$ENV{HOMEBREW_PREFIX}/opt/libpq/lib/pkgconfig")
    ENDIF ()
    PKG_CHECK_MODULES ( LIBPQ REQUIRED libpq )
    MESSAGE( "found libpq ${LIBPQ_LINK_LIBRARIES}" )
    TARGET_LINK_OPTIONS( cmdbm PRIVATE ${LIBPQ_LDFLAGS} )
    TARGET_COMPILE_OPTIONS( cmdbm PRIVATE ${LIBPQ_CFLAGS} )
    TARGET_LINK_OPTIONS( cmdbmStatic PRIVATE ${LIBPQ_LDFLAGS} )
    TARGET_COMPILE_OPTIONS( cmdbmStatic PRIVATE ${LIBPQ_CFLAGS} )
    ADD_DEFINITIONS ( -DCMDBM_PGSQL )
ENDIF ( SUPPORT_PGSQL )

IF ( SUPPORT_ODBC )
    IF (APPLE)
        SET(ENV{PKG_CONFIG_PATH} "$ENV{PKG_CONFIG_PATH}:$ENV{HOMEBREW_PREFIX}/opt/unixodbc/lib/pkgconfig")
    ENDIF ()
    PKG_CHECK_MODULES ( ODBC REQUIRED odbc )
    MESSAGE( "found odbc ${ODBC_LINK_LIBRARIES}" )
    TARGET_LINK_OPTIONS( cmdbm PRIVATE ${ODBC_LDFLAGS} )
    TARGET_COMPILE_OPTIONS( cmdbm PUBLIC ${ODBC_CFLAGS} )
    TARGET_LINK_OPTIONS( cmdbmStatic PRIVATE ${ODBC_LDFLAGS} )
    TARGET_COMPILE_OPTIONS( cmdbmStatic PUBLIC ${ODBC_CFLAGS} )
    ADD_DEFINITIONS ( -DCMDBM_ODBC )
ENDIF ( SUPPORT_ODBC )

SET_TARGET_PROPERTIES ( cmdbm PROPERTIES VERSION ${LIBCMDBM_VERSION_STRING} )
SET_TARGET_PROPERTIES ( cmdbmStatic PROPERTIES OUTPUT_NAME cmdbm )

INSTALL(TARGETS cmdbm cmdbmStatic
  LIBRARY DESTINATION lib
  ARCHIVE DESTINATION lib )
INSTALL(FILES src/libcmdbm.h DESTINATION include)
